examples/errors/parsing/arithmetic-extra-semicolon.cn
main : () [impure] =
  let x = 1;;
  ()
